# rtsc

./: Cargo.toml  LICENSE  README.md  compile-main.sh  main.ts
.github/workflows/: main.yml
src/: ast.rs  lib.rs  main.rs  parser.rs  types.rs
src/parser/: combinators.rs  expression.rs  mod.rs  statement.rs
src/phases/: codegen.rs  mod.rs  typecheck.rs
